  pairs into a single character on UCS-2 builds.

- Issue #9757: memoryview objects get a release() method to release the
  underlying buffer (previously this was only done when deallocating the
  memoryview), and gain support for the context management protocol.

- Issue #9797: pystate.c wrongly assumed that zero couldn't be a valid
  thread-local storage key.

Library
-------

- Issue #9825: Using __del__ in the definition of collections.OrderedDict made
  it possible for the user to create self-referencing ordered dictionaries
  which become permanently uncollectable GC garbage. Reinstated the Py3.1
  approach of using weakref proxies so that reference cycles never get created
  in the first place.

- Issue #9579, #9580: Fix os.confstr() for value longer than 255 bytes and
  encode the value with filesystem encoding and surrogateescape (instead of
  utf-8 in strict mode). Patch written by David Watson.

- Issue #9632: Remove sys.setfilesystemencoding() function: use
  PYTHONFSENCODING environment variable to set the filesystem encoding at
  Python startup. sys.setfilesystemencoding() creates inconsistencies because
  it is unable to reencode all filenames in all objects.

- Issue #9410: Various optimizations to the pickle module, leading to
  speedups up to 4x (depending on the benchmark).  Mostly ported from
  Unladen Swallow; initial patch by Alexandre Vassalotti.

- The pprint module now supports printing OrderedDicts in their given
  order (formerly, it would sort the keys).

- Logging: Added QueueHandler class to facilitate logging usage with
  multiprocessing.

- Issue #9707: Rewritten reference implementation of threading.local which
  is friendlier towards reference cycles.  This change is not normally
  visible since an optimized C implementation (_thread._local) is used
  instead.

- Issue #6394: os.getppid() is now supported on Windows.  Note that it will
  still return the id of the parent process after it has exited.  This process